# Manga-Website

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  SETUP.md  alemic.ini  availability.csv  backend.py  branches.csv  broward_explore.py  ci.yml  clean_manga.py  code.txt  copy.sh  docker-compose.yml  get_authors.py  libraries.csv  manga-backup.csv  manga-worker.service  manga.csv  manga.nginx  manga.service  output_of_scrapper.txt  pyproject.toml  report.txt  requirements.txt  results.html  scheduler_service.py  test_format_utils.py  valid_authors.txt  wl-copy
.evn/: pyvenv.cfg
.github/workflows/: ci.yml
broward_explore_output/One_Piece/: ilsws_782916.json  item_176101_avail_eval_0.txt  item_176101_avail_raw.json  item_176101_init.html  item_233689_avail_eval_0.txt  item_233689_avail_raw.json  item_233689_init.html  item_782916_avail_eval_0.txt  item_782916_avail_raw.json  item_782916_init.html  search_page.html  summary.txt
config/: settings.py
data/: authors.txt  availability.csv  branch_availability_status.csv  branches.csv  broward_availability.csv  job_history.json  libraries.csv  manga.csv  scrape_log.json  titles.txt  valid_authors.txt
debug/: Berserk_page_source.html  JoJo_no_Kimyou_na_Bouken_Part_7__Steel_Ball_Run_page_source.html  One_Piece_page_source.html  Vagabond_page_source.html  ilsws_355644.json  ilsws_366216.json  ilsws_367214.json  ilsws_367216.json  ilsws_394335.json  ilsws_401095.json  ilsws_404240.json  ilsws_425659.json  ilsws_430290.json  ilsws_437692.json  ilsws_437693.json  ilsws_447735.json  ilsws_452478.json  ilsws_464115.json  ilsws_472923.json  ilsws_477754.json  ilsws_482881.json  ilsws_677100.json  ilsws_678752.json  ilsws_678753.json  ilsws_744894.json  ilsws_751722.json  ilsws_756139.json  ilsws_985766.json
docker/: entrypoint.sh  nginx.conf
duckdns/: duck.sh
manga_website.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_fulltext_search.py
report/: er_diagram.drawio
scripts/: broward_debug.py  broward_scraper.py  broward_scrapper.py  broward_scrapper_batch.py  clean_manga.py  get_authors.py  get_manga.py  get_titles.py  leon_scraper.py  mal_authorize.py  scrapper.py
services/: api_service.py  mal_client.py  scraper_service.py  selenium_scraper_service.py
tests/: conftest.py  test_admin_utils.py  test_format_utils.py  test_fulltext.py  test_job_runner.py  test_routes.py  test_scraper_utils.py  test_search_utils.py
utils/: admin_utils.py  database_utils.py  format_utils.py  fulltext.py  job_logging.py  job_runner.py  middleware.py  scraper_utils.py  search_utils.py  template_filters.py  url_builders.py
web/: backend.py  gunicorn.conf.py  gunicorn.docker.conf.py
web/static/: admin.css  admin.js  admin_login.css  admin_login.js  catalog_url.js  index.css  index.js  login.js  openapi.yaml  results.css  results.js  style.css
web/templates/: admin.html  admin_login.html  api_docs.html  index.html  results.html
