[build-system]
requires      = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "manga-website"
version     = "0.1.0"
description = "Personal manga library availability tracker"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0",
    "flask-session>=0.8",
    "mysql-connector-python>=8.3",
    "requests>=2.32",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "gunicorn>=22.0",
    "python-dotenv>=1.0",
    # Job queue (utils/job_runner.py) — Redis-backed job state shared across
    # Gunicorn workers, with RQ dispatching the actual scrape/MAL-fetch work
    # to a separate `rq worker` process. See utils/job_runner.py's module
    # docstring for the full rationale.
    "redis>=5.0",
    "rq>=1.16",
    # Schema migrations (migrations/) — replaces hand-editing the SCHEMA
    # string in utils/admin_utils.py for anything that isn't a full nuke.
    # alembic pulls sqlalchemy in automatically as a hard dependency; it's
    # listed explicitly too since migrations/env.py imports it directly to
    # build the connection URL. No ORM layer is introduced anywhere else —
    # see migrations/env.py's module docstring.
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "ruff", "mypy"]

[tool.setuptools.packages.find]
where   = ["."]
include = ["web*", "config*", "utils*", "services*", "scripts*"]

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["utils", "services", "scripts", "web"]
omit   = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
show_missing = true
